<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.homepage.HomePageActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnStudy"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/system_button"
            android:drawableLeft="@drawable/ic_baseline_menu_book_24"
            android:text="@string/study"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/system_button"
            android:drawableLeft="@drawable/ic_baseline_settings_applications_24"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnAboutApp"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/system_button"
            android:drawableLeft="@drawable/ic_baseline_info_24"
            android:text="@string/about_app"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnGoOut"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/system_button"
            android:drawableLeft="@drawable/ic_baseline_exit_to_app_24"
            android:text="@string/go_out"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
</RelativeLayout>