<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.">

    <Button
        android:id="@+id/btnBackToHomePage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:background="@color/android:transparent"
        android:drawableLeft="@drawable/ic_baseline_keyboard_backspace_24"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/layout_label_my_courses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/data_structures_in_systems_analytics"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/layout_label_my_courses"
        android:background="@color/black"
        android:paddingBottom="10dp">

        <LinearLayout
            android:id="@+id/m1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:paddingBottom="100dp"
            android:background="@color/black"
            android:orientation="vertical">
            <!-- МОДУЛЬ 1 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/ic_baseline_account_tree_24"
                android:gravity="center_vertical"
                android:background="@color/gray"
                android:layout_marginVertical="@dimen/bottom_text_size"
                android:textAlignment="center"
                android:layout_margin="0dp"
                android:text="@string/module_1_name"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnModule1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/go_to_button"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:text="@string/go_to_study_module"
                android:textColor="@color/white"
                android:textSize="16dp">
            </androidx.appcompat.widget.AppCompatButton>
            <!-- МОДУЛЬ 2 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/ic_baseline_account_tree_24"
                android:gravity="center_vertical"
                android:background="@color/gray"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:text="@string/module_2_name"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnModule2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/go_to_button"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:text="@string/go_to_study_module"
                android:textColor="@color/white"
                android:textSize="16dp">
            </androidx.appcompat.widget.AppCompatButton>
            <!-- МОДУЛЬ 3 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/ic_baseline_account_tree_24"
                android:gravity="center_vertical"
                android:background="@color/gray"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:text="@string/module_3_name"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnModule3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/go_to_button"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:text="@string/go_to_study_module"
                android:textColor="@color/white"
                android:textSize="16dp">
            </androidx.appcompat.widget.AppCompatButton>
            <!-- МОДУЛЬ 4 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/ic_baseline_account_tree_24"
                android:gravity="center_vertical"
                android:background="@color/gray"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:text="@string/module_4_name"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnModule4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/go_to_button"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:text="@string/go_to_study_module"
                android:textColor="@color/white"
                android:textSize="16dp">
            </androidx.appcompat.widget.AppCompatButton>
            <!-- МОДУЛЬ 5 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/ic_baseline_account_tree_24"
                android:gravity="center_vertical"
                android:background="@color/gray"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:text="@string/module_5_name"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnModule5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/go_to_button"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:text="@string/go_to_study_module"
                android:textColor="@color/white"
                android:textSize="16dp">
            </androidx.appcompat.widget.AppCompatButton>
            <!-- МОДУЛЬ 6 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/ic_baseline_account_tree_24"
                android:gravity="center_vertical"
                android:background="@color/gray"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:text="@string/module_6_name"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnModule6"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/go_to_button"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:text="@string/go_to_study_module"
                android:textColor="@color/white"
                android:textSize="16dp">
            </androidx.appcompat.widget.AppCompatButton>
            <!-- МОДУЛЬ 7 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/ic_baseline_account_tree_24"
                android:gravity="center_vertical"
                android:background="@color/gray"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:text="@string/module_7_name"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnModule7"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/go_to_button"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:text="@string/go_to_study_module"
                android:textColor="@color/white"
                android:textSize="16dp">
            </androidx.appcompat.widget.AppCompatButton>
            <!-- МОДУЛЬ 8 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/ic_baseline_account_tree_24"
                android:gravity="center_vertical"
                android:background="@color/gray"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:text="@string/module_8_name"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnModule8"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/go_to_button"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:text="@string/go_to_study_module"
                android:textColor="@color/white"
                android:textSize="16dp">
            </androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>